corrected objective margin in LG mode, was covered by nav bar added in another 25pc margin left

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,7 @@ font-family: 'Anton', sans-serif;*/
   font-style: italic;
 }
 .textMarginTwo {
-  margin-left:50px;
+  margin-left:75px;
   margin-right:50px;
 }
 .textMargin {
